# aircraft

./: .clang-format  .editorconfig  .eslintignore  .eslintrc  .eslintrc.js  .gitattributes  .gitignore  .gitmodules  CMakeLists-A333X.txt  CMakeLists-A339X.txt  CMakeLists-SU95X.txt  Cargo-A333X.toml  Cargo-A339X.toml  Cargo-SU95X.toml  Cargo.toml  HeadwindA330neo.xml  README.md  a333x-igniter.config.mjs  a339x-igniter.config.mjs  build-utils.js  gitignore  igniter.config.mjs  jest.config.js  jsconfig.json  manifest-base-lock-highlight.json  manifest-base.json  package-lock.json  package.json  pnpm-lock.yaml  rust-toolchain.toml  su95x-igniter.config.mjs  vitest.config.mjs
hdw-a333x/src/wasm/: CMakeLists.txt
hdw-a333x/src/wasm/extra-backend-a32nx/: CMakeLists.txt
hdw-a333x/src/wasm/extra-backend-a32nx/src/: Gauge_Extra_Backend.cpp
hdw-a333x/src/wasm/extra-backend-a32nx/src/Pushback/: Pushback_A333X.cpp  Pushback_A333X.h
hdw-a333x/src/wasm/extra-backend-a333x/: CMakeLists.txt
hdw-a333x/src/wasm/extra-backend-a333x/src/: Gauge_Extra_Backend.cpp
hdw-a333x/src/wasm/extra-backend-a333x/src/AircraftPresets/: AircraftPresetProcedures_A333X.h
hdw-a333x/src/wasm/extra-backend-a333x/src/LightingPresets/: LightingPresets_A333X.cpp  LightingPresets_A333X.h
hdw-a333x/src/wasm/extra-backend-a333x/src/Pushback/: Pushback_A333X.h
hdw-a333x/src/wasm/fadec_a330/: CMakeList.txt  build.sh
hdw-a333x/src/wasm/fadec_a330/src/: EngineControl.h  FadecGauge.h  RegPolynomials.h  SimVars.h
hdw-a333x/src/wasm/fadec_a333x/: CMakeLists.txt  README.md
hdw-a333x/src/wasm/fadec_a333x/src/: Gauge_Fadec.cpp  Gauge_Fadec_v2.cpp
hdw-a333x/src/wasm/fadec_a333x/src/Fadec/: EngineControlA333X.cpp  EngineControlA333X.h  FadecSimData_A333X.hpp  Fadec_A333X.cpp  Fadec_A333X.h  FuelConfiguration_A333X.cpp  FuelConfiguration_A333X.h  Polynomials_A333X.hpp  Tables1502_A333X.hpp  ThrustLimits_A333X.hpp
hdw-a333x/src/wasm/fbw_a320/: CMakeLists.txt  build.sh
hdw-a333x/src/wasm/fbw_a320/src/: FlyByWireInterface.cpp
hdw-a333x/src/wasm/fbw_a320/src/model/: AutopilotLaws_data.cpp  ElacComputer_data.cpp  FacComputer.cpp  FacComputer.h  FacComputer_data.cpp  LateralNormalLaw.cpp  PitchAlternateLaw.cpp  binsearch_u32d.h
hdw-a333x/src/wasm/fbw_a330/: CMakeLists.txt  build.sh
hdw-a333x/src/wasm/fbw_a330/src/: FlyByWireInterface.cpp
hdw-a333x/src/wasm/fbw_a330/src/model/: AutopilotLaws_data.cpp  PitchAlternateLaw.cpp  PitchAlternateLaw.h  PitchDirectLaw.h  PitchNormalLaw.h
hdw-a333x/src/wasm/flypad-backend/: CMakeLists.txt  build.sh
hdw-a333x/src/wasm/systems/a320_hydraulic_simulation_graphs/: Cargo.toml
hdw-a333x/src/wasm/systems/a320_systems/: Cargo.toml
hdw-a333x/src/wasm/systems/a320_systems/src/: air_conditioning.rs  lib.rs  navigation.rs
hdw-a333x/src/wasm/systems/a320_systems_wasm/: Cargo.toml
hdw-a333x/src/wasm/systems/a320_systems_wasm/src/: lib.rs  nose_wheel_steering.rs
hdw-a339x-acj/src/wasm/systems/a320_hydraulic_simulation_graphs/: Cargo.toml
hdw-a339x-acj/src/wasm/systems/a320_systems_wasm/: Cargo.toml
hdw-a339x-acj/src/wasm/systems/a320_systems_wasm/src/: gear.rs  lib.rs  payload.rs
hdw-a339x/src/wasm/: CMakeLists.txt
hdw-a339x/src/wasm/extra-backend-a32nx/: CMakeLists.txt
hdw-a339x/src/wasm/extra-backend-a32nx/src/: Gauge_Extra_Backend.cpp
hdw-a339x/src/wasm/extra-backend-a330x/: CMakeLists.txt
hdw-a339x/src/wasm/extra-backend-a330x/src/: Gauge_Extra_Backend.cpp
hdw-a339x/src/wasm/extra-backend-a330x/src/AircraftPresets/: AircraftPresetProcedures_A330X.h
hdw-a339x/src/wasm/extra-backend-a330x/src/LightingPresets/: LightingPresets_A330X.cpp  LightingPresets_A330X.h
hdw-a339x/src/wasm/extra-backend-a330x/src/Pushback/: Pushback_A330X.cpp  Pushback_A330X.h
hdw-a339x/src/wasm/extra-backend-a339x/: CMakeLists.txt
hdw-a339x/src/wasm/extra-backend-a339x/src/: Gauge_Extra_Backend.cpp
hdw-a339x/src/wasm/extra-backend-a339x/src/PortFetcher/: Portfetcher_A339X.cpp  Portfetcher_A339X.h
hdw-a339x/src/wasm/extra-backend-a339x/src/Pushback/: Pushback_A339X.cpp  Pushback_A339X.h
hdw-a339x/src/wasm/fadec_a320/: CMakeList.txt  build.sh
hdw-a339x/src/wasm/fadec_a320/src/: EngineControl.h  RegPolynomials.h
hdw-a339x/src/wasm/fadec_a330/: CMakeList.txt  CMakeLists.txt  build.sh
hdw-a339x/src/wasm/fadec_a330/src/: EngineControl.h  FadecGauge.h  RegPolynomials.h  SimVars.h  Tables.h  ThrustLimits.h
hdw-a339x/src/wasm/fadec_a330x/: CMakeLists.txt  README.md
hdw-a339x/src/wasm/fadec_a330x/src/: Gauge_Fadec.cpp  Gauge_Fadec_v2.cpp
hdw-a339x/src/wasm/fadec_a339x/: CMakeLists.txt  README.md
hdw-a339x/src/wasm/fadec_a339x/src/: Gauge_Fadec.cpp  Gauge_Fadec_v2.cpp
hdw-a339x/src/wasm/fbw_a320/: CMakeLists.txt  build.sh
hdw-a339x/src/wasm/fbw_a320/src/: FlyByWireInterface.cpp
hdw-a339x/src/wasm/fbw_a330/: CMakeLists.txt  build.sh
hdw-a339x/src/wasm/fbw_a330/src/: FlyByWireInterface.cpp
hdw-a339x/src/wasm/flypad-backend/: CMakeLists.txt  build.sh
hdw-a339x/src/wasm/old_fbw_a320/: build.sh
hdw-a339x/src/wasm/systems/a320_hydraulic_simulation_graphs/: Cargo.toml
hdw-a339x/src/wasm/systems/a320_systems/: Cargo.toml
hdw-a339x/src/wasm/systems/a320_systems_wasm/: Cargo.toml
hdw-a339x/src/wasm/systems/a330_systems/: Cargo.toml
hdw-a339x/src/wasm/systems/a330_systems_wasm/: Cargo.toml
hdw-su95x/src/wasm/: CMakeLists.txt
hdw-su95x/src/wasm/extra-backend-a32nx/: CMakeLists.txt
hdw-su95x/src/wasm/fadec_a320/: CMakeLists.txt  build.sh
hdw-su95x/src/wasm/fadec_a320/src/: RegPolynomials.h
hdw-su95x/src/wasm/fadec_su95x/: README.md
hdw-su95x/src/wasm/fadec_su95x/src/: Gauge_Fadec.cpp
hdw-su95x/src/wasm/fbw_a320/: CMakeLists.txt  build.sh
hdw-su95x/src/wasm/fbw_a320/src/: FlyByWireInterface.cpp
hdw-su95x/src/wasm/fbw_su95x/: CMakeLists.txt  build.sh
hdw-su95x/src/wasm/fbw_su95x/src/: FlyByWireInterface.cpp
hdw-su95x/src/wasm/flypad-backend/: build.sh
hdw-su95x/src/wasm/systems/a320_hydraulic_simulation_graphs/: Cargo.toml
hdw-su95x/src/wasm/systems/a320_systems/: Cargo.toml
hdw-su95x/src/wasm/systems/a320_systems_wasm/: Cargo.toml
(+2608 files in other folders)
