[workspace]

members = [
    "build-a339x/src/wasm/systems/a320_systems",
    "build-a339x/src/wasm/systems/a320_systems_wasm",
    "build-a339x/src/wasm/systems/a320_hydraulic_simulation_graphs",
    "build-a339x-acj/src/wasm/systems/a320_systems",
    "build-a339x-acj/src/wasm/systems/a320_systems_wasm",
    "build-a339x-acj/src/wasm/systems/a320_hydraulic_simulation_graphs",
    "a32nx/fbw-common/src/wasm/systems/systems",
    "a32nx/fbw-common/src/wasm/systems/systems_wasm",
]

[profile.release]
lto = true
strip = true

[profile.test]
# We enable some basic optimization to prevent stack overflows during testing (flybywiresim/a32nx#7631)
# However, if this interferes with your ability to debug locally you can disable it here
opt-level=1
lto = false
debug-assertions=true
debug=true
