[package]
name = "acj330_hydraulic_simulation_graphs"
version = "0.1.0"
authors = ["davydecorps <38904654+crocket63@users.noreply.github.com>"]
edition = "2021"

[[bin]]
name = "acj330_hydraulic_simulation_graphs"
doc = false

[dependencies]
systems = { path = "../../../../../a32nx/fbw-common/src/wasm/systems/systems" }
a330_systems = { path = "../a320_systems" }
uom = "0.33.0"
rand = "0.8.0"
ntest = "0.7.2"
num-derive = "0.3.3"
num-traits = "0.2.14"
plotlib = "0.5.1"
rustplotlib = "0.0.4"
