[package]
name = "acj330_systems_wasm"
version = "0.1.0"
authors = ["FlyByWire Simulations"]
edition = "2021"

[lib]
crate-type = ["cdylib"]
test = false

[dependencies]
uom = "0.36.0"
acj330_systems = { path = "../a320_systems" }
systems = { path = "../../../../../build-common/src/wasm/systems/systems" }
systems_wasm = { path = "../../../../../build-common/src/wasm/systems/systems_wasm" }
msfs = { git = "https://github.com/flybywiresim/msfs-rs", branch = "main" }
