[package]
name = "a330_systems_wasm"
version = "0.1.0"
authors = ["Headwind Simulations"]
edition = "2021"

[lib]
crate-type = ["cdylib"]
test = false

[dependencies]
uom = "0.33.0"
a330_systems = { path = "../a330_systems" }
systems = { path = "../../../../../build-a339x-common/src/wasm/systems/systems" }
systems_wasm = { path = "../../../../../build-a339x-common/src/wasm/systems/systems_wasm" }
msfs = { git = "https://github.com/flybywiresim/msfs-rs", branch = "main" }
